vai toma no cu flamego
PORRA DE FLAMENGO

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
   body {
       background-size: 100%;
       background-repeat: no-repeat;
-      background-image: url("https://img.freepik.com/vetores-premium/padrao-de-jogo-perfeito_118813-11742.jpg");
+      background-image: url(https://i.pinimg.com/originals/b3/26/51/b326517cd8ca44b939a1bee41a7f103c.gif);
       margin: 0px
   }
   header {
